--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
     "ngx-toastr": "^8.7.3",
+    "ngx-uploader": "^4.3.0",
     "rxjs": "^6.2.0",
     "zone.js": "^0.8.26"
   },
