Home page: 1) Added percentage circle chart for number of people present. 2) Added schedule

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "6.0.3",
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
+    "ng-circle-progress": "^1.0.0",
     "ngx-toastr": "^8.7.3",
     "ngx-uploader": "^4.3.0",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
