--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
     "core-js": "^2.4.1",
+    "d3": "^5.5.0",
     "material-design-icons": "^3.0.1",
     "ng-circle-progress": "^1.0.0",
     "ngx-toastr": "^8.7.3",
@@ -48,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "^2.7.2"
