--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "core-js": "^2.4.1",
     "d3": "^5.5.0",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.22.2",
     "ng-circle-progress": "^1.0.0",
+    "ngx-moment": "^3.1.0",
     "ngx-toastr": "^8.7.3",
     "ngx-uploader": "^4.3.0",
     "rxjs": "^6.2.1",
