--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "6.0.3",
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
+    "@swimlane/ngx-charts": "^9.0.0",
     "core-js": "^2.4.1",
     "d3": "^5.5.0",
     "material-design-icons": "^3.0.1",
