--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ng-circle-progress": "^1.0.0",
+    "ng-pick-datetime": "^5.2.6",
     "ngx-moment": "^3.1.0",
     "ngx-toastr": "^8.7.3",
     "ngx-uploader": "^4.3.0",
