--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@swimlane/ngx-charts": "^9.0.0",
     "core-js": "^2.4.1",
     "d3": "^5.5.0",
+    "d3-scale": "^2.1.2",
     "heatmap.js": "^2.0.5",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
