--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
     "@swimlane/ngx-charts": "^9.0.0",
+    "aws-sdk": "^2.325.0",
     "core-js": "^2.4.1",
     "d3": "^5.5.0",
     "d3-scale": "^2.1.2",
